fix nowrap glitch

--- a/public/stylesheets/puzzletime.css
+++ b/public/stylesheets/puzzletime.css
@@ -187,7 +187,6 @@ th.periodHead {
 
 .uneven {
     background-color: #C9D8FF;
-	white-space: nowrap;
 }
 
 .times_total_sum {
